# tic-tac-toe

./: Gemfile  Guardfile  README.md  tic.cabal  tic.lkshs  tic.lkshw
src/: Engine.hs  Game.hs  Main.hs  Position.hs
test/: EngineSpec.hs  GameSpec.hs  PositionSpec.hs
